--- a/pages/class/detail/detail.wxml
+++ b/pages/class/detail/detail.wxml
@@ -1,8 +1,7 @@
 <!--pages/class/detail/detail.wxml-->
 <view class="container">
   <view class="class_img">
-    <rich-text nodes="{{classDetail.courseImg}}"></rich-text>
-    <!-- <image src="{{classDetail.courseImg}}"></image> -->
+    <rich-text nodes="{{classDetail.courseImage}}"></rich-text>
   </view>
   <view class="detail">
     <view class="class_title">{{classDetail.courseDesc}}</view>
