--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -53,11 +53,14 @@
 }
 .listR{
   width: 40%;
-  height: 100%;
+  height: 160rpx;
+  overflow: hidden;
 }
-.listR image{
+.listR rich-text{
+  display: block;
   width: 100%;
   height: 100%;
+  background: #edd;
 }
 .loginBtn{
   background: #44bec4;
