--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -15,6 +15,8 @@
   <view class="nextBtn" bindtap="next">下一题</view>
   <view class="mask" wx:if="{{videoState}}">
     <view class="ans_video">
+      <!-- {{classDetail.questionItems[classNum].analyze}} -->
+      <!-- <rich-text nodes="{{classDetail.questionItems[classNum].analyze}}"></rich-text> -->
       <video :autoplay="true" src="{{classDetail.questionItems[classNum].analyze}}"></video>
       <view class="videoNextBtn" bindtap="current">确定</view>
     </view>
